--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/server/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "build-prod": "webpack --config webpack.prod.js",
     "build-dev": "webpack-dev-server  --config webpack.dev.js --open"
   },
   "repository": {
@@ -20,24 +21,33 @@
   },
   "homepage": "https://github.com/shunmathi-baskaran/Capstone_Udacity#readme",
   "dependencies": {
-    "babel-loader": "^8.1.0",
+    "@babel/plugin-transform-runtime": "^7.11.5",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "file-loader": "^6.1.0",
     "node-fetch": "^2.6.0",
+    "regenerator-runtime": "^0.13.7",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.11.0",
+    "mini-css-extract-plugin": "^0.11.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.4",
+    "terser-webpack-plugin": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.11.5",
     "@babel/preset-env": "^7.11.5",
+    "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^4.2.2",
     "html-webpack-plugin": "^4.4.1",
+    "jest": "^26.4.2",
     "node-sass": "^4.14.1",
     "sass-loader": "^10.0.1",
-    "style-loader": "^1.2.1"
+    "style-loader": "^1.2.1",
+    "url-loader": "^4.1.0",
+    "workbox-webpack-plugin": "^5.1.3"
   }
 }
